Fix z-index search

--- a/src/components/CocktailSearch/_CocktailSearch.scss
+++ b/src/components/CocktailSearch/_CocktailSearch.scss
@@ -2,10 +2,10 @@
    display: flex;
    align-items: center;
    flex-direction: column;
-
    padding: 30px;
    border-radius: 0px;
    gap: 20px;
+   z-index: 99;
    &__label {
       font-size: 25px;
       display: block;
@@ -77,6 +77,7 @@
 }
 .cocktail-empty > h1 {
    margin-top: -192px;
+   z-index: 1
 
    // background-image: url();
 }
